--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -6,7 +6,7 @@ log4j.appender.cons.layout=org.apache.log4j.PatternLayout
 log4j.appender.cons.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L - %m%n
 
 log4j.appender.file=org.apache.log4j.FileAppender
-log4j.appender.file.File=C://telegramBotLogs/file.log
+log4j.appender.file.File=C://telegramBotConf/file.log
 log4j.appender.file.MaxFileSize=10MB
 log4j.appender.file.layout=org.apache.log4j.PatternLayout
 log4j.appender.file.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L - %m%n
