--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@ target/
 out/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
-!**/src/test/**/target/
+!**/src/task/**/target/
 src/main/resources/data.properties
 
 ### IntelliJ IDEA ###
@@ -31,7 +31,7 @@ src/main/resources/data.properties
 /.nb-gradle/
 build/
 !**/src/main/**/build/
-!**/src/test/**/build/
+!**/src/task/**/build/
 
 ### VS Code ###
 .vscode/
